--- a/CLR_Assignment.ipynb
+++ b/CLR_Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "44e1d20b",
    "metadata": {},
    "outputs": [
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "# Quick summary of results (run this after all training is complete)\n",
+    "#summary of results (run this after all training is complete)\n",
     "import pandas as pd\n",
     "\n",
     "# Results from training (copy these values from previous executions)\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2201d39f",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
     "    ax.set_title(class_names[label])\n",
     "    ax.axis('off')\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
